--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,24 @@
 .container-header{
     width: 100%;
-    height: 400px;
+    height: 200px;
     background-color: aqua;
+}
+
+.container-section-promo{
+    /*Comentarios CSS*/
+    display: flex;
+    width: 70%;
+    margin: 100px auto;
+    justify-content: center;
+    /*align-items: center;*/
+
+}
+
+.item-article{
+
+    width: 30%;
+    height: 100px;
+    background-color: rgb(72, 255, 0);
+
+
 }
