--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body{
-    background-color: bisque;
+    background-color: rgb(202, 195, 245);
 }
 
 .container-header{
     width: 100%;
-    height: 200px;
-    background-color: aqua;
+    height: 50px;
+    background-color: rgba(57, 255, 255, 0.986);
 }
 
 .container-section-promo{
