--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,12 @@
 .container-header{
     width: 100%;
-    height: 200px;
+    height: 20px;
     background-color: aqua;
 }
 
-.container-section-promo{
-    /*Comentarios CSS*/
+.section1 >*{
     display: flex;
-    width: 70%;
-    margin: 100px auto;
-    justify-content: center;
-    /*align-items: center;*/
-
+    flex-direction: column;
 }
 
-.item-article{
 
-    width: 30%;
-    height: 100px;
-    background-color: rgb(72, 255, 0);
-
-
-}
