--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@ body{
     background-color: rgba(57, 255, 255, 0.986);
 }
 
+.section1 >*{
+    display: flex;
+    flex-direction: column;
+}
+
 .container-section-promo{
     /*Comentarios CSS*/
     display: flex;
